part2/confs/yamls/app3/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: kube-system
spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 80
